correctifs accessibilité contrastes

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
   
   .bloc-lg {
     padding: 100px 50px;
+    position: relative;
   }
   
   .bloc-md {
@@ -79,21 +80,6 @@ body {
   .bg-t-edge {
     background: top no-repeat;
   }
-  
-  .bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  /* 
-  .texture-paper::before {
-    background: url("img-conversion/texture-paper.webp");
-    background-size: 280px 280px;
-  } */
   
   .b-parallax {
     background-attachment: fixed;
@@ -778,15 +764,15 @@ body {
   }
   
   .bgc-atomic-tangerine {
-    background-color: #f3976c;
+    background-color: #2c2c2c;
   }
   
   .tc-white {
-    color: #f3976c !important;
+    color: white !important;
   }
   
   .btn-atomic-tangerine {
-    background: #f3976c;
+    background: #2c2c2c;
     color: #ffffff !important;
   }
   
@@ -824,10 +810,22 @@ body {
     background-image: url("img-conversion/agence-la-panthere.webp");
   }
 
-  .texture-paper::before {
-    background: url("img-conversion/texture-paper.webp");
-    background-size: 280px 280px;
+  .bloc-bg-texture::before {
+    content: "";
+    background-size: 2px 2px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+.texture-paper::before {
+  background: url("img-conversion/texture-paper.webp");
+  background-size: 280px 280px;
 }
+
+
 
  /* .darken {
   display: block;
